# mango_explorer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
docs/superpowers/plans/: 2026-05-25-mango-explorer.md
docs/superpowers/specs/: 2026-05-25-mango-explorer-design.md
old/: events.html  highres.html  mach.html  mango_explorer.html  mango_explorer2.html  msh.html  test.html
scripts/: build-wheel.sh
src/mango_explorer/: __init__.py  boundaries.py  colormap.py  config.py  explorer.py  gridding.py  papers.py
src/mango_explorer/data/: __init__.py  base.py  fake.py  remote.py
tests/: test_boundaries.py  test_colormap.py  test_config.py  test_explorer.py  test_fake_source.py  test_gridding.py  test_papers.py
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
web/public/wheels/: index.json
web/src/: main.js  pyodide-bridge.js  styles.css
web/src/scene/: boundaries.js  events.js  scene.js  slice.js
web/src/ui/: popup.js  sidebar.js
